<resources>
    <string name="app_name">Sensor Tester</string>
    <string name="app_title">Sensor Tester</string>
    <string name="gps_button">GPS</string>
    <string name="acelerometro_button">ACELEROMETRO</string>
    <string name="camera_button">CAMERA</string>
    <string name="lanterna_button">LANTERNA</string>
    <string name="ajuda_button">Ajuda</string>
    <string name="voltar_button">Voltar</string>
    <string name="ajuda_texto">O Aplicativo tem o objetivo de checar os sensores do celular e informar o úsuario sobre eles.</string>
    <string name="coord_button">Testar</string>
    <string name="lanternaliga_button">Ligar</string>
    <string name="irmaps_button">Ir para o google maps</string>
</resources>